<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.corona.ansh.covid_19.SteyHome">

    <LinearLayout
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <ImageView
            android:onClick="backbutton"
            android:padding="5dp"
            android:layout_marginLeft="5dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_arrow_back_white_24dp"
            android:layout_width="35dp"
            android:layout_height="35dp"/>
        <TextView
            android:layout_margin="5dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="#StayHome #staysafe"
            android:textAllCaps="true"
            android:textColor="#fff"
            android:textStyle="bold"
            android:textSize="15sp" />


    </LinearLayout>
    <LinearLayout
        android:background="@drawable/gradient_background_3"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="We Recommed For Your Safety"
            android:layout_margin="8dp"
            android:textStyle="normal"
            android:textColor="#000"
            android:textSize="15sp"
            android:textAlignment="center" />
    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:gravity="right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_weight="2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Social_Distance"
                android:layout_margin="20dp"
                android:textStyle="normal"
                android:textColor="#000"
                android:textSize="18sp"
                android:textAlignment="center"
                android:layout_gravity="center"/>
            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:lottie_autoPlay="true"
                app:lottie_fileName="social-distancing.json"
                app:lottie_loop="true" />
        </LinearLayout>
        <LinearLayout
            android:gravity="left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:lottie_autoPlay="true"
            app:lottie_fileName="namaste-no-shake-hands.json"
            app:lottie_loop="true" />
            <TextView
                android:layout_weight="2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/namste"
                android:layout_margin="20dp"
                android:textStyle="normal"
                android:textSize="18sp"
                android:textColor="#000"
                android:textAlignment="center"
                android:layout_gravity="center"/>

        </LinearLayout>
        <LinearLayout
            android:gravity="right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_weight="2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Wash_Hand"
                android:textColor="#000"
                android:layout_margin="20dp"
                android:textStyle="normal"
                android:textSize="18sp"
                android:textAlignment="center"
                android:layout_gravity="center"/>
        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="right"
            app:lottie_autoPlay="true"
            app:lottie_fileName="wash-your-hands.json"
            app:lottie_loop="true" />
        </LinearLayout>
        <LinearLayout
            android:gravity="left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="left"
            app:lottie_autoPlay="true"
            app:lottie_fileName="wear-mask.json"
            app:lottie_loop="true" />
        <TextView
            android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Use_Mask"
            android:textColor="#000"
            android:layout_margin="20dp"
            android:textStyle="normal"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_weight="2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Stay_Home"
                android:textColor="#000"
                android:layout_margin="20dp"
                android:textStyle="normal"
                android:textSize="18sp"
                android:textAlignment="center"
                android:layout_gravity="center"/>
        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="right"
            app:lottie_autoPlay="true"
            app:lottie_fileName="stay-home-stay-safe-red.json"
            app:lottie_loop="true" />
        </LinearLayout>


    </LinearLayout>

    </ScrollView>

</LinearLayout>